--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -1,32 +1,50 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-	<title>Book Recommendation System</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>Book Recommendation App</title>
 </head>
-
 <body>
-	<nav class="navbar navbar-dark bg-warning shadow-lg">
-		<div class="container-fluid">
-			<a href="{% url 'home' %}" class="navbar-brand"> <h2><b>Book Recommendation System</b></h2></a>
-			<div class="d-flex">
-				<a href="{% url 'login_page' %}" class="navbar-brand"><h4>Login</h4></a>
-				<a href="{% url 'register_page' %}" class="navbar-brand"><h4>Register</h4></a>
-			</div>
-		</div>
-	</nav>
-	<h1 class="text-center" style="margin-top: 2%; color: green; font-weight: bold;">Unibooks</h1>
+    <nav class="navbar navbar-dark bg-warning shadow-lg">
+        <div class="container-fluid">
+            <a href="{% url 'home' %}" class="navbar-brand"> <h2><b>Book Recommendation System</b></h2></a>
+            <div class="d-flex">
+                <a href="{% url 'login_page' %}" class="navbar-brand"><h4>Login</h4></a>
+                <a href="{% url 'register_page' %}" class="navbar-brand"><h4>Register</h4></a>
+				<a href="{% url 'about_us' %}" class="navbar-brand"><h4>About us</h4></a>
 
-	{% block start %}{% endblock %}
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-		crossorigin="anonymous"></script>
+            </div>
+        </div>
+    </nav>
+    <h1 class="text-center" style="margin-top: 2%; color: rgb(87, 109, 235); font-weight: bold;">Unibooks</h1>
+
+    {% block content %}{% endblock %}
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    {% block javascript %}
+	
+		<script src="{% static 'js/main.js' %}"></script>
+	{% endblock %}
+
+	
+
+    <style>
+        body {
+            background-image: url("{% static 'images/laptop-books-arrangement.jpg' %}");   
+            background-size: cover;
+            background-position: center center;
+            background-attachment: scroll;
+            background-size: cover; 
+            background-repeat: no-repeat;
+        }
+        </style>
+
 </body>
-
 </html>
