--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -17,7 +17,7 @@
                 <a href="{% url 'login_page' %}" class="navbar-brand"><h4>Login</h4></a>
                 <a href="{% url 'register_page' %}" class="navbar-brand"><h4>Register</h4></a>
 				<a href="{% url 'about_us' %}" class="navbar-brand"><h4>About us</h4></a>
-
+                <a href="{% url 'custom_logout' %}" class="navbar-brand"><h4>Logout</h4></a>
             </div>
         </div>
     </nav>
