--- a/book/templates/home.html
+++ b/book/templates/home.html
@@ -82,6 +82,7 @@
         <div class="nav-wrapper">
             <a href="/" class="brand-logo"><h4><b>Book Recommendation App </b></h4></a>
             <button class="btn btn-danger" id="oooo"> <a href="{% url 'custom_logout' %}" style="color: white; text-decoration: none;">Logout</a></button>
+			<a href="{% url 'custom_logout' %}" class="navbar-brand"><h4>Logout</h4></a>
             <!-- Add buttons for Upload and View -->
             <a href="{% url 'upload_pdf' %}" class="btn yellow darken-1" style="margin-right: 10px;">Upload PDF</a>
             <a href="{% url 'pdf_list' %}" class="btn yellow darken-1">View Books</a>
